// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly in default state 1`] = `
<DocumentFragment>
  .emotion-3 {
  width: 100%;
  position: relative;
}

.emotion-0 {
  display: block;
  text-align: left;
  font-size: 1rem;
  margin-right: 0.75rem;
  margin-bottom: 0.5rem;
  font-weight: 500;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  opacity: 1;
}

.emotion-0[disabled],
.emotion-0[disabled]:focus,
.emotion-0[disabled]:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled],
.emotion-0[data-disabled]:focus,
.emotion-0[data-disabled]:hover {
  opacity: 0.4;
}

.emotion-2 {
  margin-top: 0.5rem;
  color: #718096;
  line-height: normal;
  font-size: 0.875rem;
}

<div
    class="chakra-form-control emotion-3"
    role="group"
  >
    <label
      class="chakra-form__label emotion-0"
      for="name"
      id="name-label"
    >
      Name
    </label>
    <input
      aria-describedby="name-helptext"
      class="emotion-1"
      id="name"
      placeholder="Name"
    />
    <div
      class="chakra-form__helper-text emotion-2"
      id="name-helptext"
    >
      Enter your name please!
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly when invalid 1`] = `
<DocumentFragment>
  .emotion-4 {
  width: 100%;
  position: relative;
}

.emotion-0 {
  display: block;
  text-align: left;
  font-size: 1rem;
  margin-right: 0.75rem;
  margin-bottom: 0.5rem;
  font-weight: 500;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  opacity: 1;
}

.emotion-0[disabled],
.emotion-0[disabled]:focus,
.emotion-0[disabled]:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover,
.emotion-0[data-disabled],
.emotion-0[data-disabled]:focus,
.emotion-0[data-disabled]:hover {
  opacity: 0.4;
}

.emotion-2 {
  margin-right: 0.5em;
  vertical-align: middle;
  display: inline-block;
  line-height: 1em;
  color: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1em;
  height: 1em;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #E53E3E;
  margin-top: 0.5rem;
  font-size: 0.875rem;
}

<div
    class="chakra-form-control emotion-4"
    role="group"
  >
    <label
      class="chakra-form__label emotion-0"
      data-invalid=""
      for="name"
      id="name-label"
    >
      Name
    </label>
    <input
      aria-describedby="name-feedback"
      aria-invalid="true"
      class="emotion-1"
      id="name"
      placeholder="Name"
    />
    <svg
      aria-hidden="true"
      class="chakra-icon chakra-form__error-icon emotion-2"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
        fill="currentColor"
      />
    </svg>
    <div
      aria-live="polite"
      class="chakra-form__error-message emotion-3"
      id="name-feedback"
    >
      Your name is invalid
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly when required 1`] = `
<DocumentFragment>
  .emotion-4 {
  width: 100%;
  position: relative;
}

.emotion-1 {
  display: block;
  text-align: left;
  font-size: 1rem;
  margin-right: 0.75rem;
  margin-bottom: 0.5rem;
  font-weight: 500;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  opacity: 1;
}

.emotion-1[disabled],
.emotion-1[disabled]:focus,
.emotion-1[disabled]:hover,
.emotion-1[aria-disabled=true],
.emotion-1[aria-disabled=true]:focus,
.emotion-1[aria-disabled=true]:hover,
.emotion-1[data-disabled],
.emotion-1[data-disabled]:focus,
.emotion-1[data-disabled]:hover {
  opacity: 0.4;
}

.emotion-3 {
  margin-top: 0.5rem;
  color: #718096;
  line-height: normal;
  font-size: 0.875rem;
}

.emotion-0 {
  margin-left: 0.25rem;
  color: #E53E3E;
}

<div
    class="chakra-form-control emotion-4"
    role="group"
  >
    <label
      class="chakra-form__label emotion-1"
      for="name"
      id="name-label"
    >
      Name
      <span
        aria-hidden="true"
        class="chakra-form__required-indicator emotion-0"
        role="presentation"
      >
        *
      </span>
    </label>
    <input
      aria-describedby="name-helptext"
      aria-required="true"
      class="emotion-2"
      id="name"
      placeholder="Name"
      required=""
    />
    <div
      class="chakra-form__helper-text emotion-3"
      id="name-helptext"
    >
      Enter your name please!
    </div>
  </div>
</DocumentFragment>
`;
